[package]
name = "libasi-interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"], default-features = false }
thiserror = "1.0.40"

core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1", optional = true }

[features]
default = ["std", "guest"]
guest = []
std = ["serde/std"]
rustc-dep-of-std = ["core", "alloc", "compiler_builtins", "serde/alloc"]
