cargo-features = ["per-package-target"]

[package]
name = "libasi"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-wasi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libasi-interop = { path = "../libasi-interop" }
serde_json = "1.0.94"
log = "0.4.17"
