cargo-features = ["per-package-target"]

[package]
name = "userland"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-wasi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libasi-interop = { path = "../libasi-interop" }
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
